--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"grunt-cmd-concat": "~0.2.5",
 		"grunt-contrib-uglify": "~0.4.0",
 		"grunt-contrib-cssmin": "~0.9.0",
-		"grunt-contrib-copy": "v0.5.0"
+		"grunt-contrib-copy": "v0.5.0",
+		"grunt-contrib-haml":"*"
 	}
 }
